--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,65 +1,51 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+# This is a basic workflow to help you get started with Actions
 
+name: Doxygen Action
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
+  
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Build job
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Doxygen Action
-        # You may pin to the exact commit or the version.
-        # uses: mattnotmitt/doxygen-action@cbe72c8e402e8a3faa1f0b247ef90aa6c8e4ce74
-        uses: mattnotmitt/doxygen-action@1.9.8
-        with:
-          # Path to Doxyfile
-          doxyfile-path: "doc/Doxyfile"
-          # Working directory
-          working-directory: "."
-          # Generate latex documentation
-          # enable-latex: # optional
-          # Extra alpine packages for the build environment
-          # additional-packages: # optional, default is 
-          
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./
-          destination: ./_site
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
 
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - name: Check out the repository
+      uses: actions/checkout@v4
+        
+    - name: Create clean gh-pages branch
+      run:  git checkout -b gh-pages
+
+    - name: Generate autodocs for IPPL
+      run:  make -C doc
+
+    - name: Move generated autodocs to target directory
+      run:  mv doc/html IPPL-doc
+
+    - name: Add generated autodocs to Git repo in the gh-pages branch
+      run:  |
+        git config --global user.email "IPPL-github-bot@suse.com"
+        git config --global user.name  "$GITHUB_WORKFLOW GitHub action"
+        git add IPPL-doc
+        git commit -am "Generated IPPL doc"
+
+    - name: Publish autodocs as GitHub pages
+      run:  git push -f origin gh-pages:gh-pages
+
+    - name: Result URLs
+      run:  |
+        REPO_OWNER=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
+        REPO_NAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 2)
+        echo "Formatted IPPL docs:  https://$REPO_OWNER.github.io/$REPO_NAME/IPPL-doc"
+        echo ""
+        echo "GitHub pages branch: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/tree/gh-pages" 
