--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -27,7 +27,7 @@ jobs:
       run:  git checkout -b gh-pages
 
     - name: Generate autodocs for IPPL
-      run:  make -C doc
+      run:  make -C ./doc
 
     - name: Move generated autodocs to target directory
       run:  mv doc/html IPPL-doc
