--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Doxygen Action
       uses: mattnotmitt/doxygen-action@v1.9.5
       with:
-        # Path to Doxyfile
-        doxyfile-path: "doc/Doxyfile" # default is ./Doxyfile
         # Working directory
-        working-directory: "." # default is .
+        working-directory: "doc/" # default is .
+        # Path to Doxyfile
+        doxyfile-path: "Doxyfile" # default is ./Doxyfile
     
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v4
