--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,17 +21,13 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v4
-        
-    - name: Doxygen Action
-      uses: mattnotmitt/doxygen-action@v1.9.5
-      with:
-        # Working directory
-        working-directory: "./doc/" # default is .
-        # Path to Doxyfile
-        doxyfile-path: "./Doxyfile" # default is ./Doxyfile
     
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v4
+    - name: Action Doxygen and GitHub Pages
+      id: ghaction
+      uses: AgarwalSaurav/ghaction-doxygen-ghpages@v2.0.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./doc/html
+        working-directory: .
+        doxyfile-path: doc/Doxyfile
+        html-output-folder: doc/html
+        branch: gh-pages
