--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [ master ]
 
-
+permissions: write-all
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
