--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,12 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: Checkout repository
       uses: actions/checkout@v4
+
+    - name: Doxygen Action
+      uses: mattnotmitt/doxygen-action@v1.9.5
+      with:
+        working-directory: "./doc/"
+        doxyfile-path: "./Doxyfile"
     
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
