Compiling but not tested version of FDTD solver split

--- a/src/MaxwellSolvers/CMakeLists.txt
+++ b/src/MaxwellSolvers/CMakeLists.txt
@@ -3,7 +3,9 @@ set (_SRCS
 
 set (_HDRS
     Maxwell.h
-    FDTD.h
+    FDTDSolverBase.h
+    StandardFDTDSolver.h
+    NonStandardFDTDSolver.h
 )
 
 include_DIRECTORIES (
