--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@ manual/*.idx
 manual/*.lof
 manual/*.lot
 manual/ippl_user_guide.pdf
-*.txt
 *.vtk
-semesterproject/mesh/reactormesh
+*.png
+*.csv
+semesterproject/inputfiles
 semesterproject/runs
 *~
 *.~
-
