--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ manual/ippl_user_guide.pdf
 *.vtk
 *.png
 semesterproject/runs
-semesterproject/visualization
+semesterproject/visualization/*
+!semesterpoject/visualization/*.py
 *~
 *.~
