Test interpolation quality of the grid by interpolating B field at the grid points and comparing with the original B field.

--- a/semesterproject/CMakeLists.txt
+++ b/semesterproject/CMakeLists.txt
@@ -21,6 +21,10 @@ add_executable(TestUnstructuredFieldContainer TestUnstructuredFieldContainer.cpp
 target_link_libraries(TestUnstructuredFieldContainer PRIVATE ${IPPL_LIBS} ${VTK_LIBRARIES})
 vtk_module_autoinit( TARGETS TestUnstructuredFieldContainer MODULES ${VTK_LIBRARIES})
 
+add_executable(WeightsTest WeightsTest.cpp)
+target_link_libraries(WeightsTest PRIVATE ${IPPL_LIBS} ${VTK_LIBRARIES})
+vtk_module_autoinit( TARGETS WeightsTest MODULES ${VTK_LIBRARIES})
+
 # vi: set et ts=4 sw=4 sts=4:
 
 # Local Variables:
