add mesh to run code on euler

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ manual/*.lot
 manual/ippl_user_guide.pdf
 semesterproject/runs/
 semesterproject/**/*.csv
-semesterproject/**/*.vtk
 semesterproject/**/*.png
+semesterproject/visualization/**/*.vtk
 *~
 *.~
