--- a/test/solver/CMakeLists.txt
+++ b/test/solver/CMakeLists.txt
@@ -19,4 +19,5 @@ if(IPPL_ENABLE_FFT)
     add_ippl_integration_test(TestGaussian_biharmonic LABELS solver integration)
     add_ippl_integration_test(TestGaussian_hessian LABELS solver integration)
     add_ippl_integration_test(TestP3MSolver LABELS solver integration)
+    add_ippl_integration_test(TestFDTDSolver LINK_DIRS "${DOWNLOADED_HEADERS_DIR}" LABELS solver integration)
 endif()
