Create FEM Container class with init function, an instance can be created

--- a/src/FEM/CMakeLists.txt
+++ b/src/FEM/CMakeLists.txt
@@ -36,6 +36,10 @@ install(FILES
     LagrangeSpace.h
     LagrangeSpace.hpp
 
+    # Degrees of Freedom
+    FEMContainer.h
+    FEMContainer.hpp
+
     DESTINATION include/FEM
 )
 
