update local to online git repo

--- a/unit_tests/FEM/CMakeLists.txt
+++ b/unit_tests/FEM/CMakeLists.txt
@@ -13,3 +13,4 @@ add_ippl_test(FEMVector)
 add_ippl_test(LocateElement)
 add_ippl_test(AssembleRHS)
 add_ippl_test(InterpolateDiracs)
+add_ippl_test(FEMContainerHalo)
