Add Finite Element Space Traits class (Defines which elements are used in which space and with how many DOFs)

--- a/src/FEM/CMakeLists.txt
+++ b/src/FEM/CMakeLists.txt
@@ -35,6 +35,7 @@ install(FILES
     FiniteElementSpace.hpp
     LagrangeSpaceFEMContainer.h
     LagrangeSpaceFEMContainer.hpp
+    FiniteElementSpaceTraits.h
     # LagrangeSpace.h
     # LagrangeSpace.hpp
 
