Add DOFHandler class with unit tests (Matches local DOFs to element type and matching field, NDIndex in the field and DOFNumber in the Array)

--- a/unit_tests/FEM/CMakeLists.txt
+++ b/unit_tests/FEM/CMakeLists.txt
@@ -14,3 +14,4 @@ add_ippl_test(LocateElement)
 add_ippl_test(AssembleRHS)
 add_ippl_test(InterpolateDiracs)
 add_ippl_test(FEMContainerHalo)
+add_ippl_test(DOFHandler)
