Fix halo exchange and boundary conditions in FEMContainer

--- a/unit_tests/FEM/CMakeLists.txt
+++ b/unit_tests/FEM/CMakeLists.txt
@@ -15,3 +15,4 @@ add_ippl_test(AssembleRHS)
 add_ippl_test(InterpolateDiracs)
 add_ippl_test(FEMContainerHalo)
 add_ippl_test(DOFHandler)
+add_ippl_test(FEMContainer)
